--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 
   <header>
     <div class="logo-container">
+      <!-- ロゴ画像 -->
       <img src="https://raw.githubusercontent.com/machichi2525/my-website1/main/uw_%E3%83%AD%E3%82%B0%E2%91%A0.jpg" alt="合同会社アンダーウィル ロゴ" />
       <div>
         <div class="company-name">合同会社アンダーウィル</div>
