--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       display: flex;
       align-items: center;
       padding: 20px 5%;
-      background-color: #fff;
+      background-image: url('https://www.transparenttextures.com/patterns/flower-power.png'); /* 花柄背景 */
+      background-size: cover;
+      background-position: center;
       border-bottom: 1px solid #ddd;
       position: fixed;
       top: 0;
@@ -70,7 +72,7 @@
     /* 企業理念 横流しセクション */
     .company-vision-wrapper {
       position: fixed;
-      top: 90px; /* ヘッダーの高さ + 余白 */
+      top: 120px; /* ヘッダーの高さ + 余白 */
       width: 100%;
       background-color: #f8e9d2; /* クリーム色背景 */
       padding: 12px 0;
@@ -101,7 +103,7 @@
 
     main {
       max-width: 1100px;
-      margin: 170px auto 60px; /* ヘッダー+企業理念の分余白確保 */
+      margin: 200px auto 60px; /* ヘッダー+企業理念の分余白確保 */
       padding: 0 5%;
     }
 
@@ -298,4 +300,4 @@
   </footer>
 
 </body>
-</
+</html>
