--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 
   <header>
     <div class="logo-container">
-      <!-- ロゴ画像（GitHubから直接URLを取得） -->
-      <img src="https://github.com/machichi2525/my-website1/blob/main/uw_%E3%83%AD%E3%82%B0%E2%91%A0.jpg?raw=true" alt="合同会社アンダーウィル ロゴ" />
+      <!-- ロゴ画像 (社員写真と同様に指定) -->
+      <img src="https://raw.githubusercontent.com/machichi2525/my-website1/main/uw_%E3%83%AD%E3%82%B0%E2%91%A0.jpg" alt="合同会社アンダーウィル ロゴ" />
       <div>
         <div class="company-name">合同会社アンダーウィル</div>
         <div class="tagline">ーあなたの未来を共に照らすー</div>
