--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     /* ヘッダー */
     header {
       display: flex;
+      justify-content: center;
       align-items: center;
       padding: 20px 5%;
       background-image: url('https://www.transparenttextures.com/patterns/flower-power.png'); /* 花柄背景 */
@@ -38,35 +39,12 @@
       left: 0;
       width: 100%;
       z-index: 100;
-      gap: 16px;
-    }
-
-    .logo-container {
-      display: flex;
-      align-items: center;
-      gap: 12px;
     }
 
     .logo-container img {
-      width: 80px;
+      width: 120px;
       height: auto;
       display: block;
-    }
-
-    .company-name {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.5rem;
-      font-weight: 700;
-      color: #e63946; /* 赤 */
-      text-transform: uppercase;
-      white-space: nowrap;
-    }
-
-    .tagline {
-      font-style: italic;
-      font-size: 1.1rem;
-      color: #666;
-      margin-top: 4px;
     }
 
     /* 企業理念 横流しセクション */
@@ -224,12 +202,7 @@
 
   <header>
     <div class="logo-container">
-      <!-- ロゴ画像 (社員写真と同様に指定) -->
-      <img src="https://raw.githubusercontent.com/machichi2525/my-website1/main/uw_%E3%83%AD%E3%82%B0%E2%91%A0.jpg" alt="合同会社アンダーウィル ロゴ" />
-      <div>
-        <div class="company-name">合同会社アンダーウィル</div>
-        <div class="tagline">ーあなたの未来を共に照らすー</div>
-      </div>
+      <img src="https://github.com/machichi2525/my-website1/blob/main/uw_%E3%83%AD%E3%82%B4%E2%91%A0.jpg?raw=true" alt="合同会社アンダーウィル ロゴ" />
     </div>
   </header>
 
